{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Ingame",
            "id": "c3579a2a-a01a-4aed-aa89-9be23698b7fc",
            "actions": [
                {
                    "name": "Steer_Vertical",
                    "type": "Value",
                    "id": "09c9fa11-35d9-42cd-a6c1-79e5fcc6e008",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Steer_Horizontal",
                    "type": "Button",
                    "id": "a57859d1-c5fb-4a04-95a2-198d7b1b1ed0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Accelerate",
                    "type": "Button",
                    "id": "1f353e90-07d6-4b29-ad35-4403a9173e1e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "XRotate",
                    "id": "81e34700-abb6-4d53-80d3-de867b2579fe",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer_Vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "006ccf88-207c-4794-bfaf-9d5e9811a7d7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Steer_Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6fddc32f-80f7-4d33-8c8d-d93c3a1ece61",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Steer_Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ZRotate",
                    "id": "7a5c83f8-0267-4d00-b836-30d3c0799b53",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer_Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "65af8307-16ee-42a6-8c85-00de3bbeddef",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Steer_Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "eb9fa571-087f-41dc-b283-f99879b3a457",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Steer_Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5fce34c1-6e61-48b3-9e04-a1eb0d714650",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Accelerate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}